Fixed z-index hierarchy issues; Some cleanup

--- a/openbudget/apps/entities/static/entities/explorer/css/items-list.css
+++ b/openbudget/apps/entities/static/entities/explorer/css/items-list.css
@@ -117,6 +117,7 @@
     bottom: 44px;
     left: 0;
     right: 0;
+    z-index: 10;
     height: auto;
 }
 #items_list_header {
