--- a/openbudget/apps/entities/static/entities/explorer/css/main-section.css
+++ b/openbudget/apps/entities/static/entities/explorer/css/main-section.css
@@ -6,9 +6,28 @@
     box-sizing: border-box;
 }
 
+.account .name {
+    font-size: 1.1rem;
+    line-height: 1.3rem;
+}
+.account .actions {
+    font-size: 1.3rem;
+}
+
 #main_container {
     left: 360px;
     right: 300px;
     padding: 0;
     background-color: #fff;
+}
+
+#panel-append {
+    position: absolute;
+    top: 0;
+    left: -88px;
+    z-index: 2;
+    float: none;
+    width: 76px;
+    height: auto;
+    padding: 0;
 }
